# Chronic-Care-Management

./: .gitignore  Ayush_Gupta_CS687_Week10_Paper.docx  README.md  pyproject.toml
app/: main.py
app/agents/: ingestion_agent.py  monitoring_agent.py  orchestrator_agent.py  reasoning_agent.py
app/api/: websocket.py
app/api/routes/: alerts.py  ingestion.py  patients.py  validation.py
app/core/: config.py
app/db/: session.py
app/llm/: gpt_client.py
app/memory/: context_store.py
app/models/: __init__.py  alert.py  memory.py  observation.py  patient.py
app/schemas/: common.py  ingestion.py
app/services/: alert_service.py  fhir_repository.py  patient_context.py
app/tasks/: background_monitor.py
scripts/: import_synthea.py  init_db.py  sample_fhir_bundle.json  seed_sample.py
web/: package-lock.json  package.json
web/src/: App.jsx  api.js  styles.css
web/src/components/: NotificationPane.jsx  ValidationPanel.jsx
