[project]
name = "capstone-hypertension-slice"
version = "0.1.0"
description = "Vertical slice for hypertension care-gap detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0"
  , "requests>=2.31.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
